soloution to collapsed nav bar icon issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ main {
 /* Buttons */
 
 .custom-button-filled {
-    border: 2px solid gold;
+    border: 4px solid gray;
     background-color: green;
     color: white;
     width: auto; 
@@ -43,18 +43,23 @@ main {
 .custom-button-filled:hover {
     border: 2px solid gray;
     background-color:gold;
-    color: black;
+    color: black !important;
 }
 
 
 .navbar a {
-    color: blue; 
+    color: brown; 
     font-weight: bold;
     font-size: 25px;
+    background-color: rgb(89, 128, 150);
+    border-radius: 5px;
+    padding: 3px 5px;
+    margin: 0 7px;
+    transition: background-color 0.1s ease;
 }
 
 .navbar a.active {
-    color: blue !important; 
+    color: gold !important; 
     text-decoration: underline;
     font-weight: bold;
     font-size: 25px;
@@ -78,8 +83,10 @@ main {
 
 /* Text styling */
 .center-text {
-    position: absolute; /* Position it over the image */
-    text-align: center; /* Center text horizontally */
+    /* Position it over the image */
+    position: absolute; 
+    /* Center text horizontally */
+    text-align: center; 
     font-size: 80px;
     font-family: 'Dancing Script', cursive;
     font-weight: bold; 
@@ -125,7 +132,7 @@ main {
 }
 
 .success-page #social-networks {
-    background-color: aquamarine;
+    background-color: rgb(89, 128, 150);
 }
 .custom-button-outline {
     border: 2px solid #00509e; 
